--- a/menu-1.html
+++ b/menu-1.html
@@ -20,7 +20,7 @@
 
 <body>
     <header class="top">
-        <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
+        <a href="pages/index.html"><i class="fa-solid fa-arrow-left"></i></a>
         <img id="logo" src="./images/logo/ohmyfood.png" alt="ohmyfood">
     </header>
     <main>
@@ -28,7 +28,7 @@
             <img id="image" src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="The Full Palette">
             <div class="restaurant-name">
                 <h2> The Full Palette <span class="hearts">
-                        <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512">
+                        <svg xmlns="http://www.w3.org/2000/svg" height="32px" width="40px" viewBox="0 0 512 512">
                             <path
                                 d="M47.6 300.4L228.3 469.1c7.5 7 17.4 10.9 27.7 10.9s20.2-3.9 27.7-10.9L464.4 300.4c30.4-28.3 47.6-68 47.6-109.5v-5.8c0-69.9-50.5-129.5-119.4-141C347 36.5 300.6 51.4 268 84L256 96 244 84c-32.6-32.6-79-47.5-124.6-39.9C50.5 55.6 0 115.2 0 185.1v5.8c0 41.5 17.2 81.2 47.6 109.5z" />
                             <defs>
@@ -47,90 +47,91 @@
                     </span>
                 </h2>
             </div>
-        </div>
 
-        <div class="menu-title">
-            <h3>ENTREES</h3>
-            Pearl
+            <div class="menu-title">
+                <h3>ENTREES</h3>
+            </div>
+            <div class="nav-3">
+                <div class="food-card">
+                    <ul class="food-details">
+                        <li>Escargot <br> <span>With southern French spices</span></li>
+                        <li>25€</li>
+                        <li><i class="fa-regular fa-circle-check"></i></li>
+                    </ul>
+                </div>
+                <div class="food-card">
+                    <ul class="food-details">
+                        <li>Duck Foie Gras <br> <span>With black truffle shavings</span></li>
+                        <li>35€</li>
+                        <li><i class="fa-regular fa-circle-check"></i></li>
+                    </ul>
+                </div>
+                <div class="food-card">
+                    <ul class="food-details">
+                        <li>Fried Egg <br><span>Seasoned with truffle cream and butter</span></li>
+                        <li>20€</li>
+                        <li><i class="fa-regular fa-circle-check"></i></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="menu-title">
+                <h3>MAIN DISH</h3>
+            </div>
+            <div class="nav-3">
+                <div class="food-card">
+                    <ul class="food-details">
+                        <li>Herb-Encrusted Steak <br><span>With delicately sliced and seasoned vegetables</span>
+                        </li>
+                        <li>40€</li>
+                        <li><i class="fa-regular fa-circle-check"></i></li>
+                    </ul>
+                </div>
+                <div class="food-card">
+                    <ul class="food-details">
+                        <li>Ox Tail Shepherds Pie<br> <span>With black truffle and pureed parsnips</span></li>
+                        <li>35€</li>
+                        <li><i class="fa-regular fa-circle-check"></i></li>
+                    </ul>
+                </div>
+                <div class="food-card">
+                    <ul class="food-details">
+                        <li>Filet of Sole <br> <span>With citrus dressing</span></li>
+                        <li>44€</li>
+                        <li><i class="fa-regular fa-circle-check"></i></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="menu-title">
+                <h3>DESSERTS</h3>
+            </div>
+            <div class="nav-3">
+                <div class="food-card">
+                    <ul class="food-details">
+                        <li>Paris-Brest<br><span>Revisited</span></li>
+                        <li>18€</li>
+                        <li><i class="fa-regular fa-circle-check"></i></li>
+                    </ul>
+                </div>
+                <div class="food-card">
+                    <ul class="food-details">
+                        <li>Chocolate Macaroons<br> <span>With vanilla ice cream</span></li>
+                        <li>22€</li>
+                        <li><i class="fa-regular fa-circle-check"></i></li>
+                    </ul>
+                </div>
+                <div class="food-card">
+                    <ul class="food-details">
+                        <li>Chocolate Mousse <br> <span>With spices and black truffle</span></li>
+                        <li>23€</li>
+                        <li><i class="fa-regular fa-circle-check"></i></li>
+                    </ul>
+                </div>
+            </div>
+            <form action="#">
+                <button class="purple-2">Order</button>
+            </form>
         </div>
-        <div class="nav-3">
-            <div class="food-card">
-                <ul class="food-details">
-                    <li>Escargot <br> <span>With southern French spices</span></li>
-                    <li>25€</li>
-                    <li><i class="fa-regular fa-circle-check"></i></li>
-                </ul>
-            </div>
-            <div class="food-card">
-                <ul class="food-details">
-                    <li>Duck Foie Gras <br> <span>With black truffle shavings</span></li>
-                    <li>35€</li>
-                    <li><i class="fa-regular fa-circle-check"></i></li>
-                </ul>
-            </div>
-            <div class="food-card">
-                <ul class="food-details">
-                    <li>Fried Egg <br><span>Seasoned with truffle cream and butter</span></li>
-                    <li>20€</li>
-                    <li><i class="fa-regular fa-circle-check"></i></li>
-                </ul>
-            </div>
-        </div>
-        <div class="menu-title">
-            <h3>MAIN DISH</h3>
-        </div>
-        <div class="nav-4">
-            <div class="food-card">
-                <ul class="food-details">
-                    <li>Herb-Encrusted Steak <br><span>With delicately sliced and seasoned vegetables</span>
-                    </li>
-                    <li>40€</li>
-                    <li><i class="fa-regular fa-circle-check"></i></li>
-                </ul>
-            </div>
-            <div class="food-card">
-                <ul class="food-details">
-                    <li>Ox Tail Shepherds Pie<br> <span>With black truffle and pureed parsnips</span></li>
-                    <li><strong>35€</strong></li>
-                    <li><i class="fa-regular fa-circle-check"></i></li>
-                </ul>
-            </div>
-            <div class="food-card">
-                <ul class="food-details">
-                    <li>Filet of Sole <br> <span>With citrus dressing</span></li>
-                    <li>44€</li>
-                    <li><i class="fa-regular fa-circle-check"></i></li>
-                </ul>
-            </div>
-        </div>
-        <div class="menu-title">
-            <h3>DESSERTS</h3>
-        </div>
-        <div class="nav-4">
-            <div class="food-card">
-                <ul class="food-details">
-                    <li>Paris-Brest<br><span>Revisited</span></li>
-                    <li>18€</li>
-                    <li><i class="fa-regular fa-circle-check"></i></li>
-                </ul>
-            </div>
-            <div class="food-card">
-                <ul class="food-details">
-                    <li>Chocolate Macaroons<br> <span>With vanilla ice cream</span></li>
-                    <li>22€</li>
-                    <li><i class="fa-regular fa-circle-check"></i></li>
-                </ul>
-            </div>
-            <div class="food-card">
-                <ul class="food-details">
-                    <li>Chocolate Mousse <br> <span>With spices and black truffle</span></li>
-                    <li>23€</li>
-                    <li><i class="fa-regular fa-circle-check"></i></li>
-                </ul>
-            </div>
-        </div>
-        </div>
-        </div>
+      
     </main>
     <footer>
         <h2>ohmyfood</h2>
