--- a/menu-3.html
+++ b/menu-3.html
@@ -7,10 +7,13 @@
     <script src="https://kit.fontawesome.com/571203546c.js" crossorigin="anonymous"></script>
     <title>Ohmyfood</title>
     <link rel="stylesheet" type="text/css" href="styles/main.css">
-    <!-- <title>Inserting a Google Font</title> -->
+    <link rel="stylesheet" type="text/css" href="styles/menu.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
 </head>
 <!-- Nav-section -->
 
@@ -22,88 +25,119 @@
     <main>
         <div class="background">
             <img id="image" src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Bastille">
-        <div class="restaurant-name">
-            <h2> Bastille</h2>
+            <div class="restaurant-name">
+                <h2> Bastille <span class="hearts">
+                        <svg xmlns="http://www.w3.org/2000/svg" height="32px" width="40px" viewBox="0 0 512 512">
+                            <path
+                                d="M47.6 300.4L228.3 469.1c7.5 7 17.4 10.9 27.7 10.9s20.2-3.9 27.7-10.9L464.4 300.4c30.4-28.3 47.6-68 47.6-109.5v-5.8c0-69.9-50.5-129.5-119.4-141C347 36.5 300.6 51.4 268 84L256 96 244 84c-32.6-32.6-79-47.5-124.6-39.9C50.5 55.6 0 115.2 0 185.1v5.8c0 41.5 17.2 81.2 47.6 109.5z" />
+                            <defs>
+                                <linearGradient id="Gradient-1">
+                                    <stop class="stop-1" offset="0%" />
+                                    <stop class="stop-2" offset="100%" />
+                                    <stop class="stop-3" offset="0%" />
+                                </linearGradient>
+                                <LinearGradient id="Gradient-2" x1="0.5" x2="0.5" y1="0" y2="1">
+                                    <stop offset="0%" stop-color="#9356DC"></stop>
+                                    <stop offset="100%" stop-color="#FF79DA"></stop>
+                                    <stop offset="0%" stop-color="#9356DC"></stop>
+                                </LinearGradient>
+                            </defs>
+                        </svg>
+                    </span>
+                </h2>
+            </div>
             <div class="menu-title">
                 <h3>ENTREES</h3>
             </div>
-        <div class="nav-3">
-            <div class="food-1">
-                <h4>Citrus Squid Carpaccio</h4>
-                <p>With orange zest</p>
-                <li><strong>25€</strong></li>
+            <div class="nav-3">
+                <div class="food-card">
+                    <ul class="food-details">
+                        <li>Citrus Squid Carpaccio<br><span>With orange zest</span></li>
+                        <li>25€</strong></li>
+                        <li><i class="fa-regular fa-circle-check"></i></li>
+                    </ul>
+                </div>
+                <div class="food-card">
+                    <ul class="food-details">
+                        <li>Grandmother's Vegetable Soup<br><span>parsnips, Jerusalem artichoke</span></li>
+                        <li>35€</li>
+                        <li><i class="fa-regular fa-circle-check"></i></li>
+                    </ul>
+                </div>
+                <div class="food-card">
+                    <ul class="food-details">
+                        <li>Onion Soup<br><span>Revisted</span></li>
+                        <li>20€</li>
+                        <li><i class="fa-regular fa-circle-check"></i></li>
+                    </ul>
+                </div>
             </div>
-            <div class="food-2">
-                <h4>Grandmother's Vegetable Soup</h4>
-                <p>Carrots, parsnips, Jerusalem artichoke</p>
-                <li><strong>35€</strong></li>
+            <div class="menu-title">
+                <h3>MAIN DISH</h3>
             </div>
-            <div class="food-3">
-                <h4>Onion Soup</h4>
-                <p>Revisted</p>
-                <li><strong>20€</strong></li>
-            </div>
-        </div>
-        <div class="menu-title">
-            <h3>MAIN DISH</h3>
-        </div>
-        <div class="nav-4">
-            <div class="food-1">
-                <h4>Scallops</h4>
-                <p>With mashed parsnip</p>
-                <li><strong>40€</strong></li>
-            </div>
-            <div class="food-2">
-                <h4>Magret de canard</h4>
-                <p>With mashed potatoes</p>
-                <li><strong>35€</strong></li>
-            </div>
-            <div class="food-3">
-                <h4>Game Hen</h4>
-                <p>With vegetable gnocchis</p>
-                <li><strong>44€</strong></li>
-            </div>
+            <div class="nav-3">
+                <div class="food-card">
+                    <ul class="food-details">
+                        <li>Scallops<br><span>With mashed parsnip<span></li>
+                        <li>40€</li>
+                        <li><i class="fa-regular fa-circle-check"></i></li>
+                    </ul>
+                </div>
+                <div class="food-card">
+                    <ul class="food-details">
+                        <li>Magret de canard<br><span>With mashed potatoes</span></li>
+                        <li>35€</li>
+                        <li><i class="fa-regular fa-circle-check"></i></li>
+                    </ul>
+                </div>
+                <div class="food-card">
+                    <ul class="food-details">
+                        <li>Game Hen</br><span>With vegetable gnocchis</span></li>
+                        <li>44€</li>
+                        <li><i class="fa-regular fa-circle-check"></i></li>
+                    </ul>
+                </div>
             </div>
             <div class="menu-title">
                 <h3>DESSERTS</h3>
             </div>
-            <div class="nav-5">
-                <div class="food-1">
-                    <h4>Floral Ice Cream</h4>
-                    <p>With hazelnut butter</p>
-                    <li><strong>18€</strong></li>
+            <div class="nav-3">
+                <div class="food-card">
+                    <ul class="food-details">
+                        <li>Floral Ice Cream<br><span>With hazelnut butter</span></li>
+                        <li>18€</li>
+                        <li><i class="fa-regular fa-circle-check"></i></li>
+                    </ul>
                 </div>
-                <div class="food-2">
-                    <h4>Chocolate Lava Cake</h4>
-                    <p>Revisited</p>
-                    <li><strong>22€</strong></li>
+                <div class="food-card">
+                    <ul class="food-details">
+                        <li>Chocolate Lava Cake<br><span>Revisited</span></li>
+                        <li>22€</li>
+                        <li><i class="fa-regular fa-circle-check"></i></li>
+                    </ul>
                 </div>
-                <div class="food-3">
-                    <h4>Napolean</h4>
-                    <p>With blueberries and marzipan</p>
-                    <li><strong>23€</strong></li>
+                <div class="food-card">
+                    <ul class="food-details">
+                        <li>Napolean<br><span>With blueberries and marzipan</span></li>
+                        <li>23€</li>
+                        <li><i class="fa-regular fa-circle-check"></i></li>
+                    </ul>
                 </div>
             </div>
+            <form action="#">
+                <button class="purple-2">Order</button>
+            </form>
         </div>
-        </div>
-        </div>
+
     </main>
     <footer>
-        <section class="foot">
-            <div class="footer">
-                <div class="row">
-                    <img id="logo-2" src="./images/logo/ohmyfood.png" alt="ohmyfood">
-                </div>
-            </div>
-            <div class="row-2">
-                <p>Suggest a restaurant</p>
-                <p>Become a partner</p>
-            </div>
-            <div class="row-3">
-                <p>Legal</p>
-                <p>Contact</p>
-            </div>
-        </section>
+        <h2>ohmyfood</h2>
+        <ul>
+            <li> <a href="#"><i class="fa-solid fa-utensils"></i>Suggest a restaurant</a></li>
+            <li> <a href="#"><i class="fa-solid fa-handshake"></i>Become a partner</a></li>
+            <li> <a href="#">Legal</a></li>
+            <li> <a href="#">Contact</a></li>
+        </ul>
     </footer>
 
 </body>
