--- a/menu-4.html
+++ b/menu-4.html
@@ -7,10 +7,13 @@
     <script src="https://kit.fontawesome.com/571203546c.js" crossorigin="anonymous"></script>
     <title>Ohmyfood</title>
     <link rel="stylesheet" type="text/css" href="styles/main.css">
-    <!-- <title>Inserting a Google Font</title> -->
+    <link rel="stylesheet" type="text/css" href="styles/menu.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
 </head>
 <!-- Nav-section -->
 
@@ -21,89 +24,123 @@
     </header>
     <main>
         <div class="background">
-            <img id="image" src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le Gourmand">
-        <div class="restaurant-name">
-            <h2>Le Gourmand</h2>
+            <img id="image" src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                alt="Le Gourmand">
+            <div class="restaurant-name">
+                <h2>Le Gourmand <span class="hearts">
+                        <svg xmlns="http://www.w3.org/2000/svg" height="32px" width="40px" viewBox="0 0 512 512">
+                            <path
+                                d="M47.6 300.4L228.3 469.1c7.5 7 17.4 10.9 27.7 10.9s20.2-3.9 27.7-10.9L464.4 300.4c30.4-28.3 47.6-68 47.6-109.5v-5.8c0-69.9-50.5-129.5-119.4-141C347 36.5 300.6 51.4 268 84L256 96 244 84c-32.6-32.6-79-47.5-124.6-39.9C50.5 55.6 0 115.2 0 185.1v5.8c0 41.5 17.2 81.2 47.6 109.5z" />
+                            <defs>
+                                <linearGradient id="Gradient-1">
+                                    <stop class="stop-1" offset="0%" />
+                                    <stop class="stop-2" offset="100%" />
+                                    <stop class="stop-3" offset="0%" />
+                                </linearGradient>
+                                <LinearGradient id="Gradient-2" x1="0.5" x2="0.5" y1="0" y2="1">
+                                    <stop offset="0%" stop-color="#9356DC"></stop>
+                                    <stop offset="100%" stop-color="#FF79DA"></stop>
+                                    <stop offset="0%" stop-color="#9356DC"></stop>
+                                </LinearGradient>
+                            </defs>
+                        </svg>
+                    </span>
+                </h2>
+            </div>
             <div class="menu-title">
                 <h3>ENTREES</h3>
             </div>
-        <div class="nav-3">
-            <div class="food-1">
-                <h4>Tuna Carpaccio</h4>
-                <p>Seasoned with yuzu</p>
-                <li><strong>25€</strong></li>
+            <div class="nav-3">
+                <div class="food-card">
+                    <ul class="food-details">
+                        <li>Tuna Carpaccio<br><span>Seasoned with yuzu</span></li>
+                        <li>25€</li>
+                        <li><i class="fa-regular fa-circle-check"></i></li>
+                    </ul>
+                </div>
+                <div class="food-card">
+                    <ul class="food-details">
+                        <li>Crunchy Lobster Croquets<br><span>With seasonal vegetables</span></li>
+                        <li>35€</li>
+                        <li><i class="fa-regular fa-circle-check"></i></li>
+                    </ul>
+                </div>
+                <div class="food-card">
+                    <ul class="food-details">
+                        <li>Mushroom soup<br><span>With truffles</span></li>
+                        <li>20€</li>
+                        <li><i class="fa-regular fa-circle-check"></i></li>
+                    </ul>
+                </div>
             </div>
-            <div class="food-2">
-                <h4>Crunchy Lobster Croquets</h4>
-                <p>With seasonal vegetables</p>
-                <li><strong>35€</strong></li>
+            <div class="menu-title">
+                <h3>MAIN DISH</h3>
             </div>
-            <div class="food-3">
-                <h4>Mushroom soup</h4>
-                <p>With truffles</p>
-                <li><strong>20€</strong></li>
-            </div>
-        </div>
-        <div class="menu-title">
-            <h3>MAIN DISH</h3>
-        </div>
-        <div class="nav-4">
-            <div class="food-1">
-                <h4>Roast Chicken with Provincal Herbs</h4>
-                <p>With truffle cream</p>
-                <li><strong>40€</strong></li>
-            </div>
-            <div class="food-2">
-                <h4>Roasted Lobster</h4>
-                <p>With seasonal vegetables</p>
-                <li><strong>35€</strong></li>
-            </div>
-            <div class="food-3">
-                <h4>Angust Beef Ribs</h4>
-                <p>With mashed parsnips</p>
-                <li><strong>44€</strong></li>
-            </div>
+            <div class="nav-3">
+                <div class="food-card">
+                    <ul class="food-details">
+                        <li>Roast Chicken with Provincal Herbs<br><span>With truffle cream</span></li>
+                        <li>40€</li>
+                        <li><i class="fa-regular fa-circle-check"></i></li>
+                    </ul>
+                </div>
+                <div class="food-card">
+                    <ul class="food-details">
+                        <li>Roasted Lobster<br><span>With seasonal vegetables</span></li>
+                        <li>35€</li>
+                        <li><i class="fa-regular fa-circle-check"></i></li>
+                    </ul>
+                </div>
+                <div class="food-card">
+                    <ul class="food-details">
+                        <li>Angust Beef Ribs<br><span>With mashed parsnips</span></li>
+                        <li>44€</li>
+                        <li><i class="fa-regular fa-circle-check"></i></li>
+                    </ul>
+                </div>
             </div>
             <div class="menu-title">
                 <h3>DESSERTS</h3>
             </div>
-            <div class="nav-5">
-                <div class="food-1">
-                    <h4>Assorted Dessert Plate</h4>
-                    <p>Chef's choice</p>
-                    <li><strong>18€</strong></li>
+            <div class="nav-3">
+                <div class="food-card">
+                    <ul class="food-details">
+                        <li>Assorted Dessert Plate<br><span>Chef's choice</span></li>
+                        <li>18€</li>
+                        <li><i class="fa-regular fa-circle-check"></i></li>
+                    </ul>
                 </div>
-                <div class="food-2">
-                    <h4>Creme brulee</h4>
-                    <p>Revisited</p>
-                    <li><strong>22€</strong></li>
+                <div class="food-card">
+                    <ul class="food-details">
+                        <li>Creme brulee<br><span>Revisited</span></li>
+                        <li>22€</li>
+                        <li><i class="fa-regular fa-circle-check"></i></li>
+                    </ul>
                 </div>
-                <div class="food-3">
-                    <h4>Tiramisu</h4>
-                    <p>With hazelnuts</p>
-                    <li><strong>23€</strong></li>
+                <div class="food-card">
+                    <ul class="food-details">
+                        <li>Tiramisu</h4>
+                            <br><span>With hazelnuts</span>
+                        </li>
+                        <li>23€</li>
+                        <li><i class="fa-regular fa-circle-check"></i></li>
+                    </ul>
                 </div>
             </div>
+            <form action="#">
+                <button class="purple-2">Order</button>
+            </form>
         </div>
-        </div>
-        </div>
+
     </main>
     <footer>
-        <section class="foot">
-            <div class="footer">
-                <div class="row">
-                    <img id="logo-2" src="./images/logo/ohmyfood.png" alt="ohmyfood">
-                </div>
-            </div>
-            <div class="row-2">
-                <p>Suggest a restaurant</p>
-                <p>Become a partner</p>
-            </div>
-            <div class="row-3">
-                <p>Legal</p>
-                <p>Contact</p>
-            </div>
-        </section>
+        <h2>ohmyfood</h2>
+        <ul>
+            <li> <a href="#"><i class="fa-solid fa-utensils"></i>Suggest a restaurant</a></li>
+            <li> <a href="#"><i class="fa-solid fa-handshake"></i>Become a partner</a></li>
+            <li> <a href="#">Legal</a></li>
+            <li> <a href="#">Contact</a></li>
+        </ul>
     </footer>
 
 </body>
