--- a/menu-1.html
+++ b/menu-1.html
@@ -20,7 +20,7 @@
 
 <body>
     <header class="top">
-        <a href="pages/index.html"><i class="fa-solid fa-arrow-left"></i></a>
+        <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
         <img id="logo" src="./images/logo/ohmyfood.png" alt="ohmyfood">
     </header>
     <main>
