--- a/menu-4.html
+++ b/menu-4.html
@@ -119,9 +119,7 @@
                 </div>
                 <div class="food-card">
                     <ul class="food-details">
-                        <li>Tiramisu</h4>
-                            <br><span>With hazelnuts</span>
-                        </li>
+                        <li>Tiramisu<br><span>With hazelnuts</span></li>
                         <li>23€</li>
                         <li><i class="fa-regular fa-circle-check"></i></li>
                     </ul>
