--- a/menu-3.html
+++ b/menu-3.html
@@ -53,7 +53,7 @@
                 <div class="food-card">
                     <ul class="food-details">
                         <li>Citrus Squid Carpaccio<br><span>With orange zest</span></li>
-                        <li>25€</strong></li>
+                        <li>25€</li>
                         <li><i class="fa-regular fa-circle-check"></i></li>
                     </ul>
                 </div>
@@ -78,7 +78,7 @@
             <div class="nav-3">
                 <div class="food-card">
                     <ul class="food-details">
-                        <li>Scallops<br><span>With mashed parsnip<span></li>
+                        <li>Scallops<br><span>With mashed parsnip</span></li>
                         <li>40€</li>
                         <li><i class="fa-regular fa-circle-check"></i></li>
                     </ul>
@@ -92,7 +92,7 @@
                 </div>
                 <div class="food-card">
                     <ul class="food-details">
-                        <li>Game Hen</br><span>With vegetable gnocchis</span></li>
+                        <li>Game Hen<br><span>With vegetable gnocchis</span></li>
                         <li>44€</li>
                         <li><i class="fa-regular fa-circle-check"></i></li>
                     </ul>
